json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,61 @@
 {
  "items": [
   {
+    "id": "YbV7Kd_ZTpmhnV9eUwVRRw",
+    "url": "https://remoteok.io/jobs/69170",
+    "title": "Senior IOS Engineer F m d",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=26, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=18, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Jaumo",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 8, 2018 9:55:16 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "crawled": "Oct 8, 2018 10:06:19 PM",
+    "content": "<td>                <span><h2> Senior iOS Engineer F M D </h2></span>                <br>                <span><h3> Jaumo </h3></span>                            </td><div>                                <div>We're looking for a new teammate in our&nbsp;lean company&nbsp;(19 people from&nbsp;9 different countries, 75% engineers), and give you the opportunity to be part of a very exciting journey.You are a&nbsp;Senior iOS Engineer&nbsp;(f/m/x) with a strong experience, and you will be an essential part of our&nbsp;bootstrapped&nbsp;and&nbsp;100% remote&nbsp;company with a&nbsp;flat organizational&nbsp;structure. The position is&nbsp;full-time. This is an excellent career opportunity to join a fast-growing company in a key position.WE OFFER YOU:* hands-on development with&nbsp;challenging problems* a&nbsp;great work-life balance&nbsp;- work whenever you want from wherever you are. Results - not hours. We care about what you achieve.* 30 days paid vacation* no bullshit&nbsp;- we are all engineers (including the founders)* competitive salaryYOU WILL:* be&nbsp;responsible&nbsp;for our&nbsp;award-winning apps&nbsp;- used by millions of active users every day* create and implement new features for our&nbsp;iOS apps* maintain and optimize the app environment* take&nbsp;ownership&nbsp;of your codebase* make a difference in a small team of expertsYOUR SKILLS &amp; REQUIREMENTS:An ideal candidate is autonomous, proactive, and has experience working in a variety of different platforms and technologies. We admire engineers who take the initiative, make their own decisions and implement them precisely.YOUR QUALIFICATIONS:* strong and professional knowledge of iOS development (Objective-C and&nbsp;Swift)* real-world experience building and maintaining mobile apps is a must* strong practical knowledge including APIs and Git* you love getting things done* you are not stuck with a certain language or framework* you never give up, when it’s getting difficult. It’s a challenge to master every situation.* you have a passion for good software* you speak and write business-fluent EnglishIf this profile matches your expertise, experience, and aspirations, we’d be delighted to receive your&nbsp;full&nbsp;application, including references, salary requirements, and possible starting date.                                                                                                                                                                                                                                                                                                                    </div>                            </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "pPymzmZ4Swq3WWpN-06Dgw",
     "url": "https://news.ycombinator.com/item?id=18116163",
     "title": "Stopwatch (http://stopwatch.com) | iOS Engineer | 100% remote",
