--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,53 @@
 {
  "items": [
   {
+    "id": "hiYHXDP2QeyrcwdLsDX3nQ",
+    "url": "https://remote.co/job/teach-english-online/",
+    "title": "Teach English Online",
+    "tags": [
+      "DBG:surround``OR(work,2W(work,remot)) 3W from 2W OR(wherev,wherev,where)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "VIPKID",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 14,
+      "maxValue": 22,
+      "info": "",
+      "unit": "HOUR",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 9, 2018 2:53:15 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "crawled": "Oct 9, 2018 4:06:45 PM",
+    "content": "<h2>Teach English Online at <span>VIPKID</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> International </span> | <span> Part-time </span></div><div>            <h4><strong>The VIPKid Teach English Online Opportunity</strong></h4><p><span>Looking for a flexible online teaching opportunity? What if we said you could wear yoga pants while doing it? &nbsp;We are seeking passionate educators to teach English online to over 300,000 students in China – with the flexibility to teach from anywhere and earn competitive pay of $14-$22/hour.</span></p><p><span>VIPKid is the leading global online K12 education leader and #1 Company for Remote Jobs by Forbes (as rated by FlexJobs). We’ve created a live, one-on-one online learning platform that matches motivated kids studying English in China with inspiring teachers like you. &nbsp;Also rated in Fast Company’s top 50 Most Innovative Company in the World we work with educational partners like ETS, TESOL and National Geographic Learning to develop the best curriculum and cutting-edge platform.</span></p><p><span>Why Teach with VIPKid?</span></p><h4><strong>Benefits</strong></h4><ul><li><span>Flexibility with no commute and no minimum hours</span></li><li><span>Curriculum provided</span></li><li><span>Opportunity to earn additional rewards </span></li><li><span>An amazing community of 40,000 teachers</span></li><li><span>Ability to participate in local events and conferences</span></li></ul><p><span>We develop the curriculum and our teachers work from wherever they want, set their own schedules, and take home competitive pay. Oh, and if you’re getting nervous that you don’t know any Chinese, don’t be. There’s no need to speak Chinese.</span></p><p><span>We also have a cutting-edge platform. Teachers love the fact that our classes are one-on-one. And they really, really love the fact that our highly interactive platform means:</span></p><ol><li><span>They can more easily engage their students (awesome) </span></li><li><span>They have convenient access to our pre-made lesson plans (double awesome).</span></li></ol><p><span>Did we mention we offer flexibility? That means you can work every day, only Tuesdays mornings, every other Friday, or whatever works for you.</span></p><h4><strong>Requirements &amp; Qualifications</strong></h4><ul><li><span>Teaching experience of any kind including tutoring, coaching or mentoring</span> <span>(1 year)</span></li><li><span>A Bachelor’s degree or higher</span></li><li><span>Eligibility to work in the U.S. or Canada</span></li><li><span>A computer and headset</span></li><li><span>A high-speed Internet connection</span></li><li><span>Comfy clothes. (OK, the comfy clothes are optional)</span></li></ul><h4><strong>Compensation</strong></h4><p><span>$14-$22/hr plus the opportunity to earn more through bonuses and referrals</span></p>        </div><div>        <a href='https://www.vipkidteachers.com?partnerId=15506073' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "b7ZlMymjTYi5rjakWCTCpg",
     "url": "https://news.ycombinator.com/item?id=18168435",
     "title": "SEEKING FREELANCER | CALA (https://ca.la) | REMOTE or NYC",
@@ -97,6 +144,56 @@
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "crawled": "Oct 8, 2018 5:06:13 PM",
     "content": "<h2>Dispatcher Payroll Clerk</h2><span>Company: Watty Brookes<br></span><span>Headquarters: New Mexico City,Albuquerque 87102<br></span><span>www.superstl.com<br><br></span><div><div>We are seek to cover a temporary maternity leave position for a Payroll/Dispatcher for the a 12pm – 6 pm shift. This position has the potential to become full-time as time goes on.&nbsp; Payroll Dispatchers Prints payee and drop them off at FedEx or USPS locations around him or/her four times in a week. Dispatchers are used distribute payment to our various employee remotely, taking orders from the accountant and drop off at the courier given location once all payee are printed.</div><div><br></div><div><b>Requirements</b></div><div><br></div><ul><li>&nbsp; &nbsp;You can work Remotely from anywhere in USA.<br></li><li>&nbsp; &nbsp; Documentation Skills, Data Entry Skills, Computer Skills, Energy Level,Multi-tasking, Dependability, Emotional Control.<br></li><li>&nbsp; &nbsp; &nbsp; &nbsp; You will order for Versa Check paper via best buy, staples or Amazon. Delivery take 3 days and you will be reimbursed back&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;with your first back.<br></li><li>&nbsp; &nbsp; &nbsp; &nbsp; You must have a colored or Black&amp; White Printer that is working perfectly.<br></li><li>&nbsp; &nbsp; &nbsp; &nbsp; Must have a active internet.</li></ul><div><br></div><div>&nbsp; &nbsp;</div><div><b>&nbsp; &nbsp; Job Type:</b></div><div><br></div><div>&nbsp; &nbsp;Part-time</div><div><br></div><div><b>Required education&nbsp; &amp; Pay Rate::</b></div><div>&nbsp;</div><div><br></div><div>&nbsp; &nbsp; &nbsp; &nbsp; $500 every 2 weeks</div><div>&nbsp; &nbsp; &nbsp; &nbsp; Benefits Health,</div><div>&nbsp; &nbsp; &nbsp; &nbsp; 401k plans.Paid Time Off</div><div>&nbsp; &nbsp; &nbsp; &nbsp; Holidays</div><div>&nbsp; &nbsp; &nbsp; &nbsp; High school or equivalent</div><div><br></div><div><b>Required</b></div><div><br></div><div>&nbsp; &nbsp; &nbsp; &nbsp; Routing: 0 years</div><div>&nbsp; &nbsp; &nbsp; &nbsp; You will be trained.</div><div><br></div><div>Apply now to conduct interview immediately send your resume to job@superstll.com.</div></div><div><h4>Apply for this position</h4><p><a href='mailto:job@superstll.com' rel='nofollow'>job@superstll.com</a></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "ot8Z6E5fR32Zj7Kh_nHxuA",
+    "url": "https://weworkremotely.com/remote-jobs/watty-brookes-payroll-clerk",
+    "title": "Watty Brookes: Payroll Clerk",
+    "tags": [
+      "DBG:surround``2N(anywher, remot)",
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``can 2W remot",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Watty Brookes",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 8, 2018 4:40:41 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "crawled": "Oct 8, 2018 7:06:10 PM",
+    "content": "<h2> Payroll Clerk</h2><span>Company: Watty Brookes<br></span><span>Headquarters: New Mexico City,Albuquerque 87102<br></span><div><div>We are seek to cover a temporary maternity leave position for a Payroll/Dispatcher for the a 12pm – 6 pm shift. This position has the potential to become full-time as time goes on.&nbsp; Payroll Dispatchers Prints payee and drop them off at FedEx or USPS locations around him or/her four times in a week. Dispatchers are used distribute payment to our various employee remotely, taking orders from the accountant and drop off at the courier given location once all payee are printed.</div><div><br></div><div><b>Requirements</b></div><div><br></div><ul><li>&nbsp; &nbsp;You can work Remotely from anywhere in USA.<br></li><li>&nbsp; &nbsp; Documentation Skills, Data Entry Skills, Computer Skills, Energy Level,Multi-tasking, Dependability, Emotional Control.<br></li><li>&nbsp; &nbsp; &nbsp; &nbsp; You will order for Versa Check paper via best buy, staples or Amazon. Delivery take 3 days and you will be reimbursed back&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;with your first back.<br></li><li>&nbsp; &nbsp; &nbsp; &nbsp; You must have a colored or Black&amp; White Printer that is working perfectly.<br></li><li>&nbsp; &nbsp; &nbsp; &nbsp; Must have a active internet.</li></ul><div><br></div><div>&nbsp; &nbsp;</div><div><b>&nbsp; &nbsp; Job Type:</b></div><div><br></div><div>&nbsp; &nbsp;Part-time</div><div><br></div><div><b>Required education&nbsp; &amp; Pay Rate::</b></div><div>&nbsp;</div><div><br></div><div>&nbsp; &nbsp; &nbsp; &nbsp; $500 every 2 weeks</div><div>&nbsp; &nbsp; &nbsp; &nbsp; Benefits Health,</div><div>&nbsp; &nbsp; &nbsp; &nbsp; 401k plans.Paid Time Off</div><div>&nbsp; &nbsp; &nbsp; &nbsp; Holidays</div><div>&nbsp; &nbsp; &nbsp; &nbsp; High school or equivalent</div><div><br></div><div><b>Required</b></div><div><br></div><div>&nbsp; &nbsp; &nbsp; &nbsp; Routing: 0 years</div><div>&nbsp; &nbsp; &nbsp; &nbsp; You will be trained.</div><div><br></div><div>Apply now to conduct interview immediately send your resume to job@superstll.com.</div></div><div><h4>Apply for this position</h4><p><a href='mailto:job@superstll.com' rel='nofollow'>job@superstll.com</a></p></div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
@@ -7122,54 +7219,6 @@
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "crawled": "Jan 1, 1970 1:00:00 AM",
     "content": "Freelance writer rate + site credits + various perks<br />Minimum 3-month commitment & min. 1 feature per month<br /><br />Location: Anywhere in the known universe with an internet connection OR from our offices in LA and Mexico City<br /><br />Our publication is growing quickly and we’re looking for a team of talented freelance entertainment Vloggers to create videos about the ever-expanding world of indie film, filmmaking, film festivals, and content streaming.<br /><br />Our target audience is Gen Z, Gen X, and Millennials. We aim to keep our audience entertained about entertainment.<br /><br />We foster a culture of communication, community, teamwork, and collaboration. Join us now!<br /><br />What you’ll look like:<br />Film & TV obsessive<br />You know your Kurosawa from your Kubrick, your Lynch from your Leigh, your Girls from your Broad City.<br />High achiever<br />You (think you) understand the way the film & TV industries works.<br />You know how to use web searches to learn new skills.<br />Dedicated lifelong learner<br />Looking for a new challenge<br />Willing to do whatever it takes to achieve results<br />Able to prioritize your workload<br />You think change in Hollywood is long overdue.<br />Impressive portfolio of published articles<br />Desire to work as a journalist or editor<br />Understanding of the way online publications work<br />Tenacious<br />You know A LOT about film and TV.<br />You’re a film snob, with strong opinions.<br />Words are just about your favorite thing.<br />You live on the internet.<br />You can take a complicated story and cut it down to 280 characters.<br />What we can offer<br />Access to stream endless films & TV<br />Paid rates per article<br />Full credit/author page<br />As few or as many hours as you’d like<br />The Gig<br />Film Daily is looking for the voices of your generation<br />We need contributors for our hungry website<br />Must have some social media and WordPress experience<br />Skills<br />Vlogging<br />Tweeting<br />Self-editing",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "LxYtO6hlRDO84QJX-_Pn4Q",
-    "url": "http://workinstartups.com/job-board/job/71798/try-yourself-in-a-cool-early-stage-startup-at-kitnations/",
-    "title": "Try yourself in a cool early-stage Startup!",
-    "tags": [
-      "DBG:surround``OR(you,we,employe,develop,engin,abl,workmat) 2W work 2W from 2W home",
-      "DBG_TECH1:k/t/w:twitter-bootstrap/frontend/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=8}",
-      "REMOTE1/100",
-      "TECH1/frontend",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "frontend"
-    ],
-    "hiringOrganization": {
-      "name": "KitNations",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Aug 9, 2018 11:24:10 AM",
-    "validThrough": "Jan 1, 1970 1:00:00 AM",
-    "crawled": "Jan 1, 1970 1:00:00 AM",
-    "content": "A great opportunity to see for yourself what a very-early-stage startup looks like from inside. <br /><br />We will be developing together the coolest project for millennials living abroad : a survival kit connected to a chatbot that welcomes people anywhere in the world!<br /><br />I need someone that can learn fast and can adapt to any situation, just like an entrepreneur does. I am the founder of KitNations, and I created a survival kit for people settling in London (and soon Paris, Montreal, LA, Singap...).<br /><br />The job will consist of:<br /><br />1. Contacting pubs, bars, restaurants all over London to create partnerships<br /><br />2. Creating some cool content and posting on Insta/Fb/Snap...<br /><br />3. Help me in many other tasks, grinding daily, and see THE REAL STARTUP LIFE from inside.<br /><br />If you always wondered what it could be like to launch your own company, bootstrap, grind, and make a cool product, join me!<br /><br />You're not afraid of pushing it to the limits and propose new ideas/learn new skills everyday? The ambience is very relaxed, but we will be grinding hard, and I will be raising a good seed in a few months, so why not hire you later on? <br /><br />I can't pay you though (not yet). Flexible hours. Looking for someone that likes things done well. <br /><br />Juste send me a DM with the skills you already have (Indesign? Photoshop? Coding? Photography? Video? I want someone that is eager to learn and multi-task). No formalities please!<br /><br />The job is in Camberwell/Brixton but you can work from home, we'll see together. <br /><br />Check what we do before you apply and if you believe in the idea, DM and tell me in a few words what you would like to bring to the concept!<br />",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
