Layout of "View original job description/Apply" changed; handlebars template compilation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 _site/*
 _theme_packages/*
+_tmp/*
 Thumbs.db
 .DS_Store
 .rbenv-version
@@ -7,4 +8,5 @@ Thumbs.db
 .sass-cache/
 .jekyll-metadata
 .idea/
+
 History.markdown
