json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,106 @@
 {
  "items": [
   {
+    "id": "4dUcYZ8VREO2PxskF6-WWQ",
+    "url": "https://jobmote.com/job/45427/remote-position-for-syngery-oneview-vmware-sme/",
+    "title": "Remote Position for SYNGERY / ONEVIEW /VMWARE SME",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(pacif, pst, pdt, western, california, losangel, sanfrancisco, paloalto, sanmateo) 3W OR(time,timezon)",
+      "DBG:surround``remot 16W timezon",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=5, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/America/West"
+    ],
+    "tagsNames1": [
+      "US Pacific time zone",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "Experis",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 28, 2019 10:07:20 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "crawled": "Jun 29, 2019 3:06:24 AM",
+    "content": "<div>ROLE: SYNGERY &amp; ONEVIEW W/VMWARE SME<br>DURATION: UP TO 8 WEEKS<br>LOCATION: Remote Role<br>CANDIDATE MUST BE ABLE TO WORK IN PACIFIC TIMEZONE<br> 1. Performing Integration between Synergy/One View composable APIs and VMWare. APIs including:<br>a. Assistance with automation provisioning, de-provisioning using Synergy/One View APIs<br>b. Assistance with using VMware PIs to orchestrate the provisioning and de-provisioning for Synergy hardware, to drive a single point of control for virtual and physical server provisioning.<br>c. All services will be performed remotely.<br> Key Skills Required<br>SYNERGY/ONVIEW/VMWARE<br><br>Experis is an Equal Opportunity Employer (EOE/AA)<br></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "vCc3t3QORGSWdtDCL04olw",
+    "url": "https://remote.co/job/internet-social-media-strategist/",
+    "title": "Internet, Social Media Strategist",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Bitfinex",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 28, 2019 6:40:11 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "crawled": "Jun 28, 2019 7:32:15 PM",
+    "content": "<h2>Internet, Social Media Strategist at <span>Bitfinex</span></h2><div><span><i></i> Remote</span>         | <span> International </span></div><div>            <p><strong>Job description</strong></p><p>Founded in 2012, Bitfinex is a digital asset trading platform offering state-of-the-art services for digital currency traders and global liquidity providers. We’re on a mission to create the most innovative cryptocurrencies exchange. This is a unique opportunity, a rare window of time at the tipping point of the financial evolution. Much like the early days of the internet, blockchain technology faces complex new challenges and having the best team plays a pivotal role in success.</p><p><strong>Our team is fully remote and globally distributed to capture the best talent from around the world.</strong> So far our company has grown fast and stayed lean to secure its place as a leader in the space.</p><p>If you get excited about being in an industry that is breaking new ground and have confidence you can conquer the most challenging feats we’ll encounter, we want to talk to you. Join us, and help lay the foundation for a decentralized future</p><p><strong>Currently looking for:</strong></p><p><strong>Internet/Social Media Strategist (Remote)</strong></p><p><strong>Job description</strong></p><ul><li>Develop and implement social strategies that drive community engagement and increase iFinex share of mind.</li><li>Conceptualize, categorize, visualize, edit and execute every piece of social content that goes out.</li><li>Create and manage social distribution plans and schedules that align with wider marketing and business efforts.</li><li>Define and track key performance indicators and use these to report on your strategies and campaigns to the rest of the team and management.</li><li>Put our community first, always. Make a positive impact in the hearts of our direct supporters and the larger community. Advise on and develop our social customer care strategy in partnership with our support team.</li><li>Create synergies with the PR team to initiate joint projects which feature a high integration of social.</li><li>Network with industry professionals and influencers through social media outreach and leverage these relationships to benefit our PR and marketing efforts.</li><li>Work with our product team to surface valuable customer feedback which can inform new product developments.</li><li>Collaborate with Marketing and Product development teams to create social “buzz” regarding new product launches.</li></ul><p><strong>Requirements</strong></p><ul><li><strong>3-5 years of work experience in social media management and/or strategy in technology, finance or media.</strong></li><li>Demonstrated self-starter, with the ability to work in a team environment with minimal oversight.</li><li>Strong English communication skills, both written and verbal (only applications in English will be accepted).</li><li>Experience prioritizing tasks, managing deadlines, adapting with changing priorities, and balancing short-term needs with long-term strategic initiatives.</li><li>Proven ability to work in multidisciplinary teams with copywriters, designers, customer support, product managers, etc.</li><li>Ability to deal with negative sentiment diplomatically, and convert detractors to supporters.</li></ul>        </div><div>        <a href='https://bitfinex.recruitee.com/o/internetsocial-media-strategist-remote' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "QSJX-TxqRmKaF7mgx8rrZA",
     "url": "https://remote.co/job/insurance-transcriptionist/",
     "title": "Insurance Transcriptionist",
@@ -8876,58 +8976,6 @@
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "crawled": "Apr 30, 2019 5:07:25 PM",
     "content": "<h2>Trainer at <span>HostPapa</span></h2><div><span><i></i> Remote</span>         | <span> International </span></div><div>            <ul><li><strong>Burlington, ON, Multiple Countries</strong></li><li><strong>Full Time</strong></li><li><strong>Customer Care</strong></li><li><strong>Mid Level</strong></li></ul><p><strong>Job description:</strong></p><p>We are looking for a talented and energetic trainer to help our Support and Sales teams to develop their skills and knowledge in the matter of products, sales techniques and technical support expertise. Working in a global environment with colleagues from all over the world comes with an endless amount of challenges and learning experiences.</p><p><strong>Responsibilities:</strong></p><ul><li>Prepare training content, materials, documentation and videos needed for training</li><li>Organize initial product related training for the new team members</li><li>Organize ongoing training sessions and workshops</li><li>Monitor the quality results and check-in on progress</li><li>Provide input during performance evaluations and identify hiring and training needs</li><li>Assist Solutions and Support team Managers with their day to day operations</li></ul><p><strong>Requirements:</strong></p><ul><li>Experience working in the web hosting industry is required;</li><li>3+ years of experience as a trainer;</li><li>Hands-on background in sales is required (technical sales is a plus);</li><li>Experience in designing multiple training events;</li><li>Impressive presentation, time management and interpersonal skills;</li><li>Excellent written and verbal communication skills (English).</li></ul><p><strong>Benefits and Perks:</strong></p><ul><li><strong>Ability to work from anywhere in the world</strong></li><li>Flexible Vacation</li><li>Paid Education</li></ul><p><em>HostPapa is committed to providing accommodations for people with disabilities. If you require an accommodation, we will work with you to meet your needs. Accommodation may be provided in all parts of the hiring process.</em></p>        </div><div>        <a href='https://hostpapa.applytojob.com/apply/U8nRFOcFMV/Trainer-Remote' rel='nofollow'>Apply for job</a>    </div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "R455vQRaTk2HO59xj_tGEA",
-    "url": "https://remote.co/job/essay-coach/",
-    "title": "Essay Coach",
-    "tags": [
-      "DBG:surround``2N(remot, posit)",
-      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
-      "DBG_TECH1:k/t/w:c/c/5",
-      "DBG_TECH1:k/t/w:generics/java/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=5, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=8, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/java",
-      "TITLE1/unknown",
-      "TZ/America"
-    ],
-    "tagsNames1": [
-      "American time zones",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "java"
-    ],
-    "hiringOrganization": {
-      "name": "Collegewise",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Apr 29, 2019 4:52:35 PM",
-    "validThrough": "Jan 1, 1970 1:00:00 AM",
-    "crawled": "Apr 29, 2019 5:08:29 PM",
-    "content": "<h2>Essay Coach at <span>Collegewise</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> Part-time </span></div><div>            <p><strong>Location:</strong>&nbsp;United States</p><p><strong>WANTED: Grammar Snob with Big Heart</strong></p><ul><li>Do you invariably find typos on restaurant menus, billboards, and in every novel you’ve ever read?</li><li>Are you a natural storyteller with a strong sense of narrative?</li><li>Do you want to do&nbsp;<strong>freelance&nbsp;</strong>work that really makes a difference?</li></ul><p>Collegewise is looking for seasonal, part-time editors who can effectively and enthusiastically coach students through the college application essay process.&nbsp;<strong>This is a remote position. Ideal candidates will be able to commit 10-20 hours a week from June through November.</strong></p><p><strong>Who We Are</strong></p><p>Collegewise is a college counseling company that guides high school students through the college admissions process. We bring sanity, perspective, and clarity to an often confusing and anxiety-filled time for families, ensuring that students have the resources and advice they need to confidently navigate their journey to college.</p><p>Since 1999, we’ve helped more than 12,000 “A” students, “C” students, and everyone in between apply and get accepted to schools sometimes famous, often not that they’re excited to attend. And we do it all with just the right mix of advice, encouragement, and occasional cheerleading to ensure their college admissions process goes smoothly and thoughtfully.</p><p><strong>What We Do</strong></p><p>To learn more about our inspiring work, check out this short video.</p><p><strong>How We Work</strong></p><p>To get a solid intro to our culture and the amazing people we work with, watch this short video.</p><p><strong>What’s the Job?</strong></p><p>As a part-time essay coach, you’ll work with a caseload of high school seniors via our online editing platform, coaching them through the essay-writing process for both personal statements and supplements.</p><p>In addition to identifying spelling, punctuation, and grammatical errors, you’ll provide thoughtful, specific feedback to encourage and inspire strong revisions. And through it all, you’ll bring a personal approach to the process (and lots of enthusiasm!).</p><p><strong>Who We’re Looking For (You)</strong></p><ul><li><strong>You have a background in English, writing, or education (a B.A. in one of these subjects is required, though applicants with a degree in a different field who have significant editing experience will also be considered).</strong></li><li>You can wrangle a rogue apostrophe with the best of them and typos can’t get past your eagle eye, but your editing skills don’t stop there.</li><li>You have a genuine interest in the stories students tell, and the ability to provide thoughtful, specific feedback utilizing a personal, conversational tone.</li><li>You don’t believe that part-time hours equate with part-time effort. You’re ready to bring your heart to work every day, and to be recognized for your talent and expertise.</li></ul><p><strong>Compensation</strong></p><p>Applicants who successfully complete our proofreading assessment will be paid $25 per hour during a two-week provisional period. After that time, editors who are invited to stay on may receive an increase (up to $30 per hour) based on experience and skill level.</p><p><strong>Start Date</strong></p><p>We’d like our part-time essay coaches to start in June and work through the end of November, but we do have some flexibility.</p><p><strong>How to Apply</strong></p><p>If your interest is piqued, please start by telling us more about yourself. You’re more interesting than a generic, “insert-name-of-company-here” letter. So please be yourself smart, thoughtful (maybe even funny). You might also consider checking out our five tips for job-seekers.</p><p>Then submit your information at the right. When you paste your “Why Collegewise?” answer into the text box, your formatting will hold up when we see it (but if it doesn’t, we’ll blame the text box, not you).</p><p>Thanks for reading our post. We’d love to hear from you, but if we don’t, we hope you find the perfect professional fit someplace else.</p>        </div><div>        <a href='http://collegewise.applytojob.com/apply/job_20190419182514_ABMKK7OZHYXZKTQZ/Parttime-Essay-Coach' rel='nofollow'>Apply for job</a>    </div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
